Fixed the About but pricing columns too narrow and navigation is vertically aligned funky

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,16 @@ body {
   padding-right: 30px;
 }
 
+.vertical-centered {
+  position: absolute;
+  top: 10%;
+  -webkit-transform: translateY(-10%);
+  -moz-transform: translateY(-10%);
+  -ms-transform: translateY(-10%);
+  -o-transform: translateY(-10%);
+  transform: translateY(-10%);
+}
+
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
@@ -65,18 +75,23 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 
 /*----------- Navigation Row----------------*/
 
-#navigation {margin-top: 5%}
+#navigation {
+  background-color: #FFF;
+  padding: 20px;
+}
 
 #navigation ul {
     text-align: right;
     width: 100%;
-    height: 20px;
+    white-space: nowrap;
+    margin:0;
+  }
 
-}
+
 #navigation li {
     display:inline;
-
 }
+
 #navigation ul a {
     color: #15487A;
     padding: 0 10px;
@@ -87,6 +102,8 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
     color: #34495E;
     text-decoration: underline;
 }
+
+#navigation img {margin: 0px;}
 
 /*----------- Header Row----------------*/
 
@@ -207,7 +224,7 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 }
 
 
-#pricing p {
+#pricing .header p {
   font-family: DroidSans;
   font-size: 12px;
   color: #FFFFFF;
@@ -241,8 +258,14 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 
 #pricing .header-premium p {
   color: #984B43;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  padding:0px;
+  margin: 0px;
   }
 
+#pricing p {text-align: center;}
 
 /*----------- Call Row----------------*/
 
@@ -326,7 +349,6 @@ h3 { font-size: 28px; font-size: 2.8rem; line-height: 1.3;  letter-spacing: .1re
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
-ZA
 
 
 
